[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu/PAUSE/PAUSE.gd" type="Script" id=1]

[node name="Control" type="Control"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 74.0
margin_top = 31.0
margin_right = 241.0
margin_bottom = 131.0

[node name="Label" type="Label" parent="Panel"]
margin_left = 18.0
margin_top = 3.0
margin_right = 148.0
margin_bottom = 24.0
text = "=GAME PAUSE="
align = 1
valign = 1

[node name="btnRESUME" type="Button" parent="Panel/Label"]
margin_left = 1.0
margin_top = 25.0
margin_right = 129.0
margin_bottom = 45.0
text = "RESUME"

[node name="btnOPTION" type="Button" parent="Panel/Label"]
margin_left = 1.0
margin_top = 48.0
margin_right = 129.0
margin_bottom = 68.0
text = "OPTION"

[node name="btnEXIT" type="Button" parent="Panel/Label"]
margin_left = 1.0
margin_top = 71.0
margin_right = 130.0
margin_bottom = 91.0
text = "EXIT"

[connection signal="pressed" from="Panel/Label/btnRESUME" to="." method="_on_btnRESUME_pressed"]
[connection signal="pressed" from="Panel/Label/btnOPTION" to="." method="_on_btnOPTION_pressed"]
[connection signal="pressed" from="Panel/Label/btnEXIT" to="." method="_on_btnEXIT_pressed"]
